# django-toyo-auth

./: README.md  pyproject.toml
.github/workflows/: publish-package.yml
test_django_toyo_auth/: __init__.py  apps.py
test_django_toyo_auth/providers/iniad/: provider.py
